@@ -5,14 +5,16 @@ import com.mojang.datafixers.util.Pair;
 import com.mrcrayfish.vehicle.Reference;
 import com.mrcrayfish.vehicle.init.ModBlocks;
 import com.mrcrayfish.vehicle.world.storage.loot.functions.CopyFluidTanks;
-import net.minecraft.data.DataGenerator;
-import net.minecraft.data.loot.BlockLoot;
+import net.minecraft.data.PackOutput;
+import net.minecraft.data.loot.BlockLootSubProvider;
 import net.minecraft.data.loot.LootTableProvider;
 import net.minecraft.resources.ResourceLocation;
+import net.minecraft.world.flag.FeatureFlagSet;
+import net.minecraft.world.flag.FeatureFlags;
+import net.minecraft.world.item.Item;
 import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.storage.loot.LootPool;
 import net.minecraft.world.level.storage.loot.LootTable;
-import net.minecraft.world.level.storage.loot.ValidationContext;
 import net.minecraft.world.level.storage.loot.entries.LootItem;
 import net.minecraft.world.level.storage.loot.functions.CopyNbtFunction;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParamSet;
@@ -20,10 +22,9 @@ import net.minecraft.world.level.storage.loot.parameters.LootContextParamSets;
 import net.minecraft.world.level.storage.loot.providers.nbt.ContextNbtProvider;
 import net.minecraft.world.level.storage.loot.providers.number.ConstantValue;
 import net.minecraftforge.registries.ForgeRegistries;
-import org.jetbrains.annotations.NotNull;
 
 import java.util.List;
-import java.util.Map;
+import java.util.Set;
 import java.util.function.BiConsumer;
 import java.util.function.Consumer;
 import java.util.function.Supplier;
@@ -32,35 +33,24 @@ import java.util.stream.Collectors;
 /**
  * Author: MrCrayfish
  */
-public class LootTableGen extends LootTableProvider
+public class LootTableGen
 {
-    private final List<Pair<Supplier<Consumer<BiConsumer<ResourceLocation, LootTable.Builder>>>, LootContextParamSet>> tables = ImmutableList.of(Pair.of(BlockProvider::new, LootContextParamSets.BLOCK));
-
-    public LootTableGen(DataGenerator generator)
-    {
-        super(generator);
+    public static LootTableProvider create(PackOutput output) {
+        return new LootTableProvider(output, Set.of(), List.of(new LootTableProvider.SubProviderEntry(BlockProvider::new, LootContextParamSets.BLOCK)));
     }
 
-    @Override
-    protected void validate(@NotNull Map<ResourceLocation, LootTable> map, @NotNull ValidationContext ctx)
-    {}
-
-    @Override
-    @NotNull
-    protected List<Pair<Supplier<Consumer<BiConsumer<ResourceLocation, LootTable.Builder>>>, LootContextParamSet>> getTables()
+    public static class BlockProvider extends BlockLootSubProvider
     {
-        return this.tables;
-    }
+        protected BlockProvider() {
+            super(Set.of(), FeatureFlags.REGISTRY.allFlags());
+        }
 
-    private static class BlockProvider extends BlockLoot
-    {
         @Override
-        protected void addTables()
-        {
-            this.add(ModBlocks.FLUID_EXTRACTOR.get(), BlockProvider::createFluidTankDrop);
-            this.add(ModBlocks.FLUID_MIXER.get(), BlockProvider::createFluidTankDrop);
-            this.add(ModBlocks.FUEL_DRUM.get(), BlockProvider::createFluidTankDrop);
-            this.add(ModBlocks.INDUSTRIAL_FUEL_DRUM.get(), BlockProvider::createFluidTankDrop);
+        protected void generate() {
+            this.add(ModBlocks.FLUID_EXTRACTOR.get(), this::createFluidTankDrop);
+            this.add(ModBlocks.FLUID_MIXER.get(), this::createFluidTankDrop);
+            this.add(ModBlocks.FUEL_DRUM.get(), this::createFluidTankDrop);
+            this.add(ModBlocks.INDUSTRIAL_FUEL_DRUM.get(), this::createFluidTankDrop);
             this.dropSelf(ModBlocks.FLUID_PIPE.get());
             this.dropSelf(ModBlocks.FLUID_PUMP.get());
             this.dropSelf(ModBlocks.GAS_PUMP.get());
@@ -69,7 +59,7 @@ public class LootTableGen extends LootTableProvider
             this.dropSelf(ModBlocks.WORKSTATION.get());
             this.dropSelf(ModBlocks.JACK.get());
             this.dropSelf(ModBlocks.JACK_HEAD.get());
-            this.add(ModBlocks.VEHICLE_CRATE.get(), BlockProvider::createVehicleCrateDrop);
+            this.add(ModBlocks.VEHICLE_CRATE.get(), this::createVehicleCrateDrop);
         }
 
         @Override
@@ -78,12 +68,12 @@ public class LootTableGen extends LootTableProvider
             return ForgeRegistries.BLOCKS.getValues().stream().filter(block -> ForgeRegistries.BLOCKS.getKey(block) != null && Reference.MOD_ID.equals(ForgeRegistries.BLOCKS.getKey(block).getNamespace())).collect(Collectors.toSet());
         }
 
-        protected static LootTable.Builder createFluidTankDrop(Block block)
+        protected LootTable.Builder createFluidTankDrop(Block block)
         {
             return LootTable.lootTable().withPool(applyExplosionCondition(block, LootPool.lootPool().setRolls(ConstantValue.exactly(1)).add(LootItem.lootTableItem(block).apply(CopyFluidTanks.copyFluidTanks()))));
         }
 
-        protected static LootTable.Builder createVehicleCrateDrop(Block block)
+        protected LootTable.Builder createVehicleCrateDrop(Block block)
         {
             return LootTable.lootTable()
                     .withPool(applyExplosionCondition(
@@ -101,5 +91,6 @@ public class LootTableGen extends LootTableProvider
                                     )
                     ));
         }
+
     }
 }
